sema/testdata/gcc-c99-extra/reject/asm-qual-1.c
void
f (void)
{
  asm volatile ("");

  asm const ("");

  asm restrict ("");
}
